Fixing title of HTML

--- a/app_aeroporto/index.html
+++ b/app_aeroporto/index.html
@@ -12,7 +12,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css"
     />
-    <title>App Pizzaria</title>
+    <title>App Roteiro de Viagens</title>
   </head>
   <body>
     <div id="root"></div>
